typescript compile 관련 설정 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,14 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+    "jsx": "react-jsx",
+    "declaration": true,
+    "declarationDir": "dist/@types",
+    "emitDeclarationOnly": true
   },
   "include": [
-    "src"
+    "src/comp"
   ],
   "references": [{ "path": "./tsconfig.node.json"}]
 }
