--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "front-lib-skeleton",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/@types/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build && ttsc -p ./tsconfig.json ",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "eslint": "^8.20.0",
     "eslint-plugin-react": "^7.30.1",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "ttypescript": "^1.5.13"
   }
 }
