--- a/package.json
+++ b/package.json
@@ -8,23 +8,34 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && ttsc -p ./tsconfig.json ",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-vite": "^0.2.2",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.20.0",
     "eslint-plugin-react": "^7.30.1",
+    "ttypescript": "^1.5.13",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0",
-    "ttypescript": "^1.5.13"
+    "vite": "^3.0.0"
   }
 }
