--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -17,4 +17,4 @@ jobs:
       - run: yarn
       - run: yarn publish --prerelease
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
